tests/fixtures/invalid/pow_float_bool_int.py
# Cannot call pow() with Float, Bool, Int
x = pow(1.0, True, 1)
